feat: lat -> latitude , long -> longtitude and listing of museum
