# app/OpenApi/Schemas/MuseumSchema.php
@@ -11,8 +11,8 @@ use OpenApi\Annotations as OA;
  *     title="Museum",
  *     @OA\Property(property="id", type="integer", example=1),
  *     @OA\Property(property="name", type="string", example="Museo nazionale di Capodimonte"),
- *     @OA\Property(property="lat", type="number", format="float", example=40.9458663),
- *     @OA\Property(property="long", type="number", format="float", example=14.3715925),
+ *     @OA\Property(property="latitude", type="number", format="float", example=40.9458663),
+ *     @OA\Property(property="longitude", type="number", format="float", example=14.3715925),
  *     @OA\Property(property="region", type="string", example="Campania"),
  *     @OA\Property(property="province", type="string", example="NA"),
  *     @OA\Property(property="municipality", type="string", example="Napoli"),
